// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render active day 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

.c0 {
  height: 36px;
  width: 36px;
  background: #71c9ed;
  color: #ffffff;
  font-family: Montserrat,sans-serif;
  font-weight: 500;
  font-size: 14px;
  box-shadow: 1px 0 0 0 #71c9ed, 0 1px 0 0 #71c9ed, 1px 1px 0 0 #71c9ed, 1px 0 0 0 #71c9ed inset, 0 1px 0 0 #71c9ed inset;
  cursor: pointer;
  border: 0;
  padding: 0;
  outline: 0;
}

.c0:hover {
  background: #39beef;
  color: #ffffff;
}

.c0:focus {
  box-shadow: none;
  border: 2px solid #009fef;
}

<div>
  <button
    aria-label="Day-Wed Mar 27 2019"
    class="c0"
    color="#ffffff"
    data-testid="Day"
    font-family="Montserrat, sans-serif"
    font-size="14px"
    font-weight="500"
    tabindex="0"
    type="button"
  >
    <div
      class="c1"
      height="100%"
      width="100%"
    >
      1
    </div>
  </button>
</div>
`;

exports[`should render disabled day 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

.c0 {
  height: 36px;
  width: 36px;
  background: #ffffff;
  color: #58595B;
  font-family: Montserrat,sans-serif;
  font-weight: 500;
  font-size: 14px;
  box-shadow: 1px 0 0 0 #e6e7e8, 0 1px 0 0 #e6e7e8, 1px 1px 0 0 #e6e7e8, 1px 0 0 0 #e6e7e8 inset, 0 1px 0 0 #e6e7e8 inset;
  cursor: pointer;
  border: 0;
  padding: 0;
  outline: 0;
  cursor: initial;
  opacity: 0.4;
}

.c0:focus {
  box-shadow: none;
  border: 2px solid #009fef;
}

<div>
  <button
    aria-label="Day-Wed Mar 27 2019"
    class="c0"
    color="#58595B"
    data-testid="Day"
    font-family="Montserrat, sans-serif"
    font-size="14px"
    font-weight="500"
    tabindex="0"
    type="button"
  >
    <div
      class="c1"
      height="100%"
      width="100%"
    >
      1
    </div>
  </button>
</div>
`;

exports[`should render first or last active day 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

.c0 {
  height: 36px;
  width: 36px;
  background: #00aeef;
  color: #ffffff;
  font-family: Montserrat,sans-serif;
  font-weight: 500;
  font-size: 14px;
  box-shadow: 1px 0 0 0 #00aeef, 0 1px 0 0 #00aeef, 1px 1px 0 0 #00aeef, 1px 0 0 0 #00aeef inset, 0 1px 0 0 #00aeef inset;
  cursor: pointer;
  border: 0;
  padding: 0;
  outline: 0;
}

.c0:focus {
  box-shadow: none;
  border: 2px solid #009fef;
}

<div>
  <button
    aria-label="Day-Wed Mar 27 2019"
    class="c0"
    color="#ffffff"
    data-testid="Day"
    font-family="Montserrat, sans-serif"
    font-size="14px"
    font-weight="500"
    tabindex="0"
    type="button"
  >
    <div
      class="c1"
      height="100%"
      width="100%"
    >
      1
    </div>
  </button>
</div>
`;

exports[`should render normal day 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

.c0 {
  height: 36px;
  width: 36px;
  background: #ffffff;
  color: #58595B;
  font-family: Montserrat,sans-serif;
  font-weight: 500;
  font-size: 14px;
  box-shadow: 1px 0 0 0 #e6e7e8, 0 1px 0 0 #e6e7e8, 1px 1px 0 0 #e6e7e8, 1px 0 0 0 #e6e7e8 inset, 0 1px 0 0 #e6e7e8 inset;
  cursor: pointer;
  border: 0;
  padding: 0;
  outline: 0;
}

.c0:hover {
  background: #e6e7e8;
  color: #58595B;
}

.c0:focus {
  box-shadow: none;
  border: 2px solid #009fef;
}

<div>
  <button
    aria-label="Day-Wed Mar 27 2019"
    class="c0"
    color="#58595B"
    data-testid="Day"
    font-family="Montserrat, sans-serif"
    font-size="14px"
    font-weight="500"
    tabindex="0"
    type="button"
  >
    <div
      class="c1"
      height="100%"
      width="100%"
    >
      1
    </div>
  </button>
</div>
`;
